fix: resolve the bug about text alignment in button (firefox browser)
- used "justify-content" property to align the text in center
- firefox does not support ":has()" which causes the bug

--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -22,6 +22,7 @@
 
   @supports not selector(&:has(span)) {
     align-items: center;
+    justify-content: center;
     display: flex;
     gap: calc(var(--base-gap) * 0.5);
   }
